Remove divs in unordered list in header and nav bar and correct alignment in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
     
 }
 
@@ -20,19 +21,24 @@ header {
     /* background: url(../images/mattie-mcdonagh-placeholder.jpg) no-repeat center center / cover; */
     display: flex;
     align-items: center;
-    position: absolute;
-    clear: both;
-    
+    justify-content:flex-end;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    height: 250px;
 }
 
 h1 {
-    max-width: 150px;
     font-size: xxx-large;
     color: rgb(130, 183, 243);
+    justify-self: flex-start;
     flex: 2;
 }
 
-.header-nav-list {flex: 1;}
+.header-nav-list {
+    
+    flex:1;
+} 
 
 .header-nav {
     padding-right: 14px;
@@ -46,9 +52,8 @@ h1 {
 }
 
 .header-map {
-    flex: 1;
 
-    
+    /*flex: 1;*/
 }
 
 
@@ -61,48 +66,40 @@ h1 {
 
 /*nav bar*/
 
-.nav-bar-container {
+ .nav-bar-container {
     height: 100px;
     background-color: rgb(130, 183, 243);
     padding-left: 10px;
-}
+margin-top:250px;}
+    
+
 
 .nav-bar a {
     color: azure;
 }
 
-.nav-bar-list {
+.nav-bar {
     display: flex;
 }
 
-.nav-bar {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    list-style-type: none;
-}
 
 .nav-bar a:hover {
     color: salmon;
 }
 
-#nav-home {
-    flex: 1;
+#home {
+    flex: 3;
 }
 
-#nav-home a {
+#home a {
     font-size: large;
 }
 
 #nav-bar-list {
     flex: 1;
-    display: flex;
     justify-content: flex-end;
 }
 
-#nav-bar-list>li {
-    flex: 1;
-}
 /*nav bar ends*/
 
 /*footer*/
